# segger-rtt

./: .gitignore  CMakeLists.txt  README.md
RTT/: SEGGER_RTT_Conf.h
